dnl Process this file with autoconf to produce a configure script.
AC_INIT(nl_error.c)
AM_INIT_AUTOMAKE(nortlib, 2.0)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF

AC_OUTPUT(Makefile)
