dnl Process this file with autoconf to produce a configure script.
AC_INIT(INSTALL.tm)
AM_INIT_AUTOMAKE(tmlib, 2.0)

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
