dnl Process this file with autoconf to produce a configure script.
AC_INIT(INSTALL.tm)
AM_INIT_AUTOMAKE(tmlib, 2.0)

dnl Checks for programs.
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_CHECK_HEADERS([cmdalgo.h],[],[AC_MSG_ERROR([cannot locate required header])])

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
