dnl Process this file with autoconf to produce a configure script.
AC_INIT(INSTALL.tmph)
AM_INIT_AUTOMAKE(tmph, 1.1)

# Defined CPPFLAGS and LDFLAGS if they are not already defined
CPPFLAGS=${CPPFLAGS--I/usr/local/include}
LDFLAGS=${LDFLAGS--L/usr/local/lib}

dnl Checks for programs.
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
