lib_LTLIBRARIES = libnort.la
libnort_la_SOURCES = nl_error.c nl_verr.c nldbg.c \
                     compiler.c ll_of_str.c newmem.c nlresp.c \
                     strdup.c opnifile.c optstr.c yyin.c md5c.c \
                     mlf.c
include_HEADERS = nortlib.h compiler.h ll_of_str.h md5.h mlf.h
ouidir = $(includedir)/oui
oui_HEADERS = compiler.oui

